e2e/tests/snapshots/golden_tests__golden_test_testdata_views_sql.snap
---
source: e2e/tests/golden-tests.rs
expression: query_result
---
\set ON_ERROR_STOP 1
CREATE EXTENSION promscale;
CREATE EXTENSION
SELECT _prom_catalog.get_or_create_metric_table_name('cpu_usage');
 get_or_create_metric_table_name 
---------------------------------
 (1,cpu_usage,t)
(1 row)

SELECT _prom_catalog.get_or_create_metric_table_name('cpu_total');
 get_or_create_metric_table_name 
---------------------------------
 (2,cpu_total,t)
(1 row)

CALL _prom_catalog.finalize_metric_creation();
CALL
INSERT INTO prom_data.cpu_usage
  SELECT timestamptz '2000-01-01 02:03:04'+(interval '1s' * g), 100.1 + g, _prom_catalog.get_or_create_series_id('{"__name__": "cpu_usage", "namespace":"dev", "node": "brain"}')
  FROM generate_series(1,10) g;
INSERT 0 10
INSERT INTO prom_data.cpu_usage
  SELECT timestamptz '2000-01-01 02:03:04'+(interval '1s' * g), 100.1 + g, _prom_catalog.get_or_create_series_id('{"__name__": "cpu_usage", "namespace":"production", "node": "pinky", "new_tag":"foo"}')
  FROM generate_series(1,10) g;
INSERT 0 10
INSERT INTO prom_data.cpu_total
  SELECT timestamptz '2000-01-01 02:03:04'+(interval '1s' * g), 100.0, _prom_catalog.get_or_create_series_id('{"__name__": "cpu_total", "namespace":"dev", "node": "brain"}')
  FROM generate_series(1,10) g;
INSERT 0 10
INSERT INTO prom_data.cpu_total
  SELECT timestamptz '2000-01-01 02:03:04'+(interval '1s' * g), 100.0, _prom_catalog.get_or_create_series_id('{"__name__": "cpu_total", "namespace":"production", "node": "pinky", "new_tag_2":"bar"}')
  FROM generate_series(1,10) g;
INSERT 0 10
SELECT * FROM prom_info.label ORDER BY key;
    key    | value_column_name | id_column_name |        values         | num_values 
-----------+-------------------+----------------+-----------------------+------------
 __name__  | __name__          | __name___id    | {cpu_total,cpu_usage} |          2
 namespace | namespace         | namespace_id   | {dev,production}      |          2
 new_tag   | new_tag           | new_tag_id     | {foo}                 |          1
 new_tag_2 | new_tag_2         | new_tag_2_id   | {bar}                 |          1
 node      | node              | node_id        | {brain,pinky}         |          2
(5 rows)

\set ON_ERROR_STOP 0
SELECT count(public.compress_chunk(i)) from public.show_chunks('prom_data.cpu_usage') i;
 count 
-------
     1
(1 row)

\set ON_ERROR_STOP 0
SET role prom_reader;
SET
SELECT * FROM prom_metric.cpu_usage ORDER BY time, series_id LIMIT 5;
          time          | value | series_id |  labels   | node_id | namespace_id | new_tag_id 
------------------------+-------+-----------+-----------+---------+--------------+------------
 2000-01-01 02:03:05+00 | 101.1 |         1 | {1,3,4}   |       3 |            4 |           
 2000-01-01 02:03:05+00 | 101.1 |         2 | {1,5,7,6} |       5 |            7 |          6
 2000-01-01 02:03:06+00 | 102.1 |         1 | {1,3,4}   |       3 |            4 |           
 2000-01-01 02:03:06+00 | 102.1 |         2 | {1,5,7,6} |       5 |            7 |          6
 2000-01-01 02:03:07+00 | 103.1 |         1 | {1,3,4}   |       3 |            4 |           
(5 rows)

SELECT time, value, prom_api.jsonb(labels), prom_api.val(namespace_id) FROM prom_metric.cpu_usage ORDER BY time, series_id LIMIT 5;
          time          | value |                                          jsonb                                          |    val     
------------------------+-------+-----------------------------------------------------------------------------------------+------------
 2000-01-01 02:03:05+00 | 101.1 | {"node": "brain", "__name__": "cpu_usage", "namespace": "dev"}                          | dev
 2000-01-01 02:03:05+00 | 101.1 | {"node": "pinky", "new_tag": "foo", "__name__": "cpu_usage", "namespace": "production"} | production
 2000-01-01 02:03:06+00 | 102.1 | {"node": "brain", "__name__": "cpu_usage", "namespace": "dev"}                          | dev
 2000-01-01 02:03:06+00 | 102.1 | {"node": "pinky", "new_tag": "foo", "__name__": "cpu_usage", "namespace": "production"} | production
 2000-01-01 02:03:07+00 | 103.1 | {"node": "brain", "__name__": "cpu_usage", "namespace": "dev"}                          | dev
(5 rows)

SELECT * FROM prom_series.cpu_usage ORDER BY series_id;
 series_id |  labels   | node  | namespace  | new_tag 
-----------+-----------+-------+------------+---------
         1 | {1,3,4}   | brain | dev        | 
         2 | {1,5,7,6} | pinky | production | foo
(2 rows)


